# uptell

./: .gitignore  OPTIMIZATION_NOTES.md  README.md  package-lock.json  test_public_api.py
backend/: .gitignore  main.py  pyproject.toml  supabase_client.py  websocket_manager.py
backend/routes/: auth_routes.py  crud_routes.py  dependencies.py  schemas.py
backend/routes/apps/: history.py  router.py  utils.py
backend/routes/auth/: router.py
backend/routes/incidents/: logs.py  router.py  utils.py
backend/routes/maintenance/: router.py  utils.py
backend/routes/orgs/: router.py
backend/routes/public/: __init__.py  router.py
backend/routes/schemas/: __init__.py  app_history.py  application.py  incident.py  log.py  maintainance.py  organization.py  team.py
backend/routes/user_orgs/: router.py
backend/utils/: email_templates.py  notification_service.py  send_email.py
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json
frontend/.cursor/rules/: general.mdc
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(protected)/: layout.tsx
frontend/src/app/(public)/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/stats/: page.tsx
frontend/src/components/: app-sidebar.tsx  error-boundary.tsx  error-demo.tsx  nav-main.tsx  nav-user.tsx  spinner.tsx  websocket-provider.tsx
frontend/src/hooks/: useApiError.ts  useApiMutation.ts  usePublicStats.ts
frontend/src/lib/: api-client.ts  socket.ts  token.ts
frontend/src/lib/atoms/: auth.ts
frontend/src/types/: organization.ts
(+68 files in other folders)
